fix bug on IE, Opera browser

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -80,7 +80,9 @@ body
     left: 0
     z-index: 12
     +min-height($top_height)
+    background-color: #333333
     +background-image(linear-gradient(center top, #333333, #111111))
+    background: -o-linear-gradient(#333333, #111111)
     +last
     #logo
       a
@@ -133,7 +135,7 @@ body
     height: 280px
     width: 200px
     +float-left
-    margin-left: 5px
+    margin-left: 10px
     #user-profile-photo
       +float-left
       img        
@@ -247,7 +249,10 @@ body
         +background-image(linear-gradient(left top, white, #dddddd))
 
         #items_feed
+          #search_term
+            margin-left: 10px
         #items_search
+          
 
 
 #facebox .content
